<resources>
    <string name="app_name">TMDB</string>
    <string name="feature_home">Home</string>
    <string name="feature_search">Search</string>
    <string name="feature_favorite">Favorite</string>
</resources>
