<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="error_request_timeout">Request timeout</string>
    <string name="error_too_many_requests">Too many requests</string>
    <string name="error_no_internet">No internet connection</string>
    <string name="error_server">Server error</string>
    <string name="error_serialization">Data parsing error</string>
    <string name="error_unknown">Unknown error</string>
    <string name="error_client">Client error</string>
</resources>
